Выполнил задание по адаптивным сеткам

--- a/form.html
+++ b/form.html
@@ -71,6 +71,7 @@
                   <legend class="form__group-title">Ваши безбашенные достижения в&nbsp;путешествии</legend>
                 </div>
                 <div class="form__fields">
+
                   <div class="form__entry-field  form__entry-field--switch">
                     <input class="form__field" type="checkbox" id="selfie" name="selfie" checked>
                     <label class="form__label" for="selfie">Сделал селфи с&nbsp;акулой</label>
@@ -107,13 +108,15 @@
                     Контактная информация
                   </legend>
                 </div>
-                <div class="form__entry-field">
-                  <label class="form__label" for="phone-number">Номерок телефончика</label>
-                  <input class="form__field" type="tel" id="phone-number" placeholder="Номер, пожалуйста" name="phone-number">
-                </div>
-                <div class="form__entry-field">
-                  <label class="form__label" for="email">Адресок почты</label>
-                  <input class="form__field" type="email" id="email" placeholder="E-mail, пожалуйста" name="email">
+                <div class="form__fields">
+                  <div class="form__entry-field">
+                    <label class="form__label" for="phone-number">Номерок телефончика</label>
+                    <input class="form__field" type="tel" id="phone-number" placeholder="Номер, пожалуйста" name="phone-number">
+                  </div>
+                  <div class="form__entry-field">
+                    <label class="form__label" for="email">Адресок почты</label>
+                    <input class="form__field" type="email" id="email" placeholder="E-mail, пожалуйста" name="email">
+                  </div>
                 </div>
               </div>
             </div>
