--- a/index.html
+++ b/index.html
@@ -138,21 +138,13 @@
         </div>
       </div>
       <div class="slider  slider--versions-slider">
-        <input class="slider__switcher-input" type="radio" id="versions-slider-btn-1" name="versions-slider-toggle" checked>
-        <input class="slider__switcher-input" type="radio" id="versions-slider-btn-2" name="versions-slider-toggle">
-        <input class="slider__switcher-input" type="radio" id="versions-slider-btn-3" name="versions-slider-toggle">
-        <div class="slider__switcher">
-          <label class="slider__switcher-label" for="versions-slider-btn-1"></label>
-          <label class="slider__switcher-label" for="versions-slider-btn-2"></label>
-          <label class="slider__switcher-label" for="versions-slider-btn-3"></label>
-        </div>
         <table class="versions-table" border="1">
           <tr class="versions-table__header-row">
             <th class="versions-table__header-cell  versions-table__header-cell--marker">
             </th>
             <th class="versions-table__header-cell  versions-table__header-cell--marker">
               <span>База</span>
-              <span>3,99 USD</span>
+              <span>1,99 USD</span>
             </th>
             <th class="versions-table__header-cell  versions-table__header-cell--marker">
               <span>Стандарт</span>
@@ -160,7 +152,7 @@
             </th>
             <th class="versions-table__header-cell  versions-table__header-cell--marker">
               <span>Анлим</span>
-              <span>3,99 USD</span>
+              <span>9,99 USD</span>
             </th>
 
           </tr>
@@ -183,6 +175,14 @@
             <td class="versions-table__data-cell">+</td>
           </tr>
         </table>
+        <div class="slider__switcher">
+            <input class="slider__switcher-input" type="radio" id="table-slider-btn-1" name="table-slider-toggle" checked>
+            <label class="slider__switcher-label" for="table-slider-btn-1"></label>
+            <input class="slider__switcher-input" type="radio" id="table-slider-btn-2" name="table-slider-toggle">
+            <label class="slider__switcher-label" for="table-slider-btn-2"></label>
+            <input class="slider__switcher-input" type="radio" id="table-slider-btn-3" name="table-slider-toggle">
+            <label class="slider__switcher-label" for="table-slider-btn-3"></label>
+          </div>
       </div>
 
       <div class="contacts-block">
