--- a/photo.html
+++ b/photo.html
@@ -44,7 +44,7 @@
           </div>
         </div>
       </div>
-      <section class="photo-post">
+      <section class="photo-post  photo-post--panorama">
         <a class="photo-post__image-link" href="#">
           <img class="photo-post__image  photo-post__image--panorama" src="img/panorama-mobile.jpg" alt="" width="320" height="135">
           <span class="photo-post__panorama-label">Панорама дня</span>
@@ -197,10 +197,25 @@
               <button class="post-photo__filter-button  post-photo__filter-button--filter2">Фильтр2</button>
               <button class="post-photo__filter-button  post-photo__filter-button--filter3">Фильтр3</button>
             </div>
-            <div class="range-controls">
-              <div class="range-controls__wrapper">
-                <div class="range-controls__scale"></div>
-                <div class="range-controls__toggle"></div>
+
+            <div class="post-photo__filter-controllers">
+              <div class="post-photo__filter-controller  post-photo__filter-controller--active  post-photo__filter-controller--filter1">
+                <div class="range-controls">
+                  <div class="range-controls__scale"></div>
+                  <div class="range-controls__toggle"></div>
+                </div>
+              </div>
+              <div class="post-photo__filter-controller  post-photo__filter-controller--filter2">
+                <div class="range-controls">
+                  <div class="range-controls__scale"></div>
+                  <div class="range-controls__toggle"></div>
+                </div>
+              </div>
+              <div class="post-photo__filter-controller  post-photo__filter-controller--filter3">
+                <div class="range-controls">
+                  <div class="range-controls__scale"></div>
+                  <div class="range-controls__toggle"></div>
+                </div>
               </div>
             </div>
           </div>
