Закончил блок с отзывами, блок с контактами(планшет, мобильный)

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <span class="comment__author-information">25 лет, водитель трамвая</span>
                 </h2>
                 <blockquote class="comment__text">
-                  <p>&laquo;Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!&raquo;1</p>
+                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
                 </blockquote>
               </section>
             </div>
@@ -115,7 +115,7 @@
                   <span class="comment__author-information">25 лет, водитель трамвая</span>
                 </h2>
                 <blockquote class="comment__text">
-                  <p>&laquo;Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!&raquo;2</p>
+                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
                 </blockquote>
               </section>
             </div>
@@ -126,7 +126,7 @@
                   <span class="comment__author-information">25 лет, водитель трамвая</span>
                 </h2>
                 <blockquote class="comment__text">
-                  <p>&laquo;Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!&raquo;3</p>
+                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
                 </blockquote>
               </section>
             </div>
@@ -135,9 +135,9 @@
               <label class="slider__switcher-label  slider__switcher-label--second" for="comment-slider-btn-2"></label>
               <label class="slider__switcher-label  slider__switcher-label--third" for="comment-slider-btn-3"></label>
             </div>
+            <button class="slider__toggle slider__toggle--prev" type="button">Предыдущий отзыв</button>
+            <button class="slider__toggle slider__toggle--next" type="button">Следующий отзыв</button>
           </div>
-          <button class="comment__toggle comment__toggle--prev" type="button">Предыдущий отзыв</button>
-          <button class="comment__toggle comment__toggle--next" type="button">Следующий отзыв</button>
         </div>
       </div>
       <div class="slider  slider--versions-slider">
