--- a/form.html
+++ b/form.html
@@ -4,19 +4,20 @@
 	<meta charset="UTF-8">
 	<title>Pink</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="wrapper">
-    <header class="page-header  page-header--open">
+    <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo  logo--header">Pink</a>
+        <a class="logo  logo--header" href="/index.html">Pink</a>
         <button class="page-header__toggle-menu" type="button"><span>Меню</span>
         </button>
       </div>
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Главная</a>
+            <a class="main-nav__link" href="/index.html">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="#">Фотографии</a>
@@ -34,13 +35,13 @@
     <main class="page-main">
       <div class="intro">
         <div class="intro__wrapper">
-          <h1 class="intro__text">Конкурс на&nbsp;самое безбашеное путешествие с&nbsp;Пинк</h1>
+          <h1 class="intro__text">Конкурс на&nbsp;самое безбашенное путешествие с&nbsp;Пинк</h1>
         </div>
       </div>
       <div class="content-description">
         <div class="content-description__wrapper">
           <div class="content-description__text">
-            <p>Поделитесь своей историей и&nbsp;получите шанс выиграть ценный приз&nbsp;&mdash; 1000&nbsp;миль на&nbsp;вашу бонусную карту! <span>Пожалуйста, заполните форму ниже:</span></p>
+            <p>Поделитесь своей историей и&nbsp;получите шанс выиграть ценный приз&nbsp;&mdash; 1000 миль на&nbsp;вашу бонусную карту! <span>Пожалуйста, заполните форму ниже:</span></p>
           </div>
         </div>
       </div>
@@ -162,7 +163,7 @@
         <div class="form__wrapper">
           <div class="form__send-container">
             <input class="button" type="submit" value="Отправить форму">
-            <span class="form__hint"><span>*</span> &mdash;&nbsp; обязательные поля</span>
+            <span class="form__hint"><span>*</span> &mdash;&nbsp;обязательные поля</span>
           </div>
         </div>
       </form>
@@ -171,7 +172,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__container">
-          <a class="logo  logo--extended">Pink</a>
+          <a class="logo  logo--extended" href="/index.html">Pink</a>
           <div class="social-links">
             <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
             <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
