--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <header class="page-header  page-header--open">
+    <header class="page-header">
       <div class="page-header__wrapper">
         <a class="logo  logo--header">Pink</a>
         <button class="page-header__toggle-menu" type="button"><span>Меню</span>
@@ -17,7 +17,7 @@
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Главная</a>
+            <a class="main-nav__link">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="#">Фотографии</a>
