Закончил страницу формы(планшет)

--- a/form.html
+++ b/form.html
@@ -162,7 +162,7 @@
         </div>
         <div class="form__wrapper">
           <div class="form__send-container">
-            <input class="button" type="submit" value="Отправить форму">
+            <input class="button  button--send-form" type="submit" value="Отправить форму">
             <span class="form__hint"><span>*</span> &mdash;&nbsp;обязательные поля</span>
           </div>
         </div>
