Закончил страницу с формой

--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
       <div class="content-description">
         <div class="content-description__wrapper">
           <div class="content-description__text">
-            <p>Поделитесь своей историей и&nbsp;получите шанс выиграть ценный приз&nbsp;&mdash; 1000 миль на&nbsp;вашу бонусную карту! <span>Пожалуйста, заполните форму ниже:</span></p>
+            <p>Поделитесь своей историей и&nbsp;получите шанс выиграть ценный приз&nbsp;&mdash; 1000 миль на вашу бонусную карту! <span>Пожалуйста, заполните форму ниже:</span></p>
           </div>
         </div>
       </div>
