Закончил pop up (планшетная и десктопная версии)

--- a/form.html
+++ b/form.html
@@ -208,10 +208,10 @@
     <div class="popup  popup--success">
       <div class="popup__wrapper">
         <div class="popup__title">
-          Ваша заявка отправлена!
+          Ваша заявка отправлена
         </div>
         <div class="popup__description">
-          <p>Спасибо за&nbsp;ваше участие, ваша заявка уже поступила к&nbsp;нам. В ближайшее время мы рассмотрим ее и<br> оповестим вас.</p>
+          <p>Спасибо за&nbsp;ваше участие, ваша заявка уже поступила к&nbsp;нам. В ближайшее время мы рассмотрим ее и <span>оповестим вас.</span></p>
         </div>
       </div>
       <div class="popup__btn-wrapper">
