Закончил страницу с фотографиями(планшетная версия)

--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
   <div class="wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo  logo--header" href="/index.html">Pink</a>
+        <a class="logo" href="/index.html">Pink</a>
         <button class="page-header__toggle-menu" type="button"><span>Меню</span>
         </button>
       </div>
@@ -178,7 +178,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__container">
-          <a class="logo  logo--extended" href="/index.html">Pink</a>
+          <a class="logo  logo--blue" href="/index.html">Pink</a>
           <div class="social-links">
             <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
             <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
