--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo  logo--header">Pink</a>
+        <a class="logo">Pink</a>
         <button class="page-header__toggle-menu" type="button"><span>Меню</span>
         </button>
       </div>
@@ -216,7 +216,7 @@
     <footer class="page-footer  page-footer--index">
       <div class="page-footer__wrapper">
         <div class="page-footer__container">
-          <a class="logo  logo--extended">Pink</a>
+          <a class="logo  logo--blue">Pink</a>
           <div class="social-links">
             <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
             <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
