Закончил страницу с фотографиями

--- a/photo.html
+++ b/photo.html
@@ -49,6 +49,7 @@
       <section class="photo-post  photo-post--panorama">
         <a class="photo-post__image-link" href="#">
           <picture>
+            <source media = "(min-width: 1200px)" srcset = "img/panorama-desktop.jpg">
             <source media = "(min-width: 700px)" srcset = "img/panorama-tablet.jpg">
             <img class="photo-post__image  photo-post__image--panorama" src="img/panorama-mobile.jpg" alt="" width="320" height="135">
           </picture>
@@ -78,6 +79,7 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
+                <source media = "(min-width: 1200px)" srcset = "img/photo-1-desktop.jpg">
                 <source media = "(min-width: 700px)" srcset = "img/photo-1-tablet.jpg">
                 <img class="photo-post__image" src="img/photo-1-mobile.jpg" alt="" width="280" height="180">
               </picture>
@@ -104,6 +106,7 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
+                <source media = "(min-width: 1200px)" srcset = "img/photo-2-desktop.jpg">
                 <source media = "(min-width: 700px)" srcset = "img/photo-2-tablet.jpg">
                 <img class="photo-post__image" src="img/photo-2-mobile.jpg" alt="" width="280" height="180">
               </picture>
@@ -130,6 +133,7 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
+                <source media = "(min-width: 1200px)" srcset = "img/photo-3-desktop.jpg">
                 <source media = "(min-width: 700px)" srcset = "img/photo-3-tablet.jpg">
                 <img class="photo-post__image" src="img/photo-3-mobile.jpg" alt="" width="280" height="180">
               </picture>
@@ -156,6 +160,7 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
+                <source media = "(min-width: 1200px)" srcset = "img/photo-4-desktop.jpg">
                 <source media = "(min-width: 700px)" srcset = "img/photo-4-tablet.jpg">
                 <img class="photo-post__image" src="img/photo-4-mobile.jpg" alt="" width="280" height="180">
               </picture>
@@ -182,6 +187,7 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
+                <source media = "(min-width: 1200px)" srcset = "img/photo-5-desktop.jpg">
                 <source media = "(min-width: 700px)" srcset = "img/photo-5-tablet.jpg">
                 <img class="photo-post__image" src="img/photo-5-mobile.jpg" alt="" width="280" height="180">
               </picture>
@@ -208,6 +214,7 @@
          <section class="photo-post">
           <a class="photo-post__image-link" href="#">
             <picture>
+              <source media = "(min-width: 1200px)" srcset = "img/photo-6-desktop.jpg">
               <source media = "(min-width: 700px)" srcset = "img/photo-6-tablet.jpg">
               <img class="photo-post__image" src="img/photo-6-mobile.jpg" alt="" width="280" height="180">
             </picture>
