--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <main class="page-main">
-      <div class="intro  intro--main">
+      <div class="intro  intro--index-page">
         <div class="intro__wrapper">
           <h1 class="intro__text">Взгляните на&nbsp;жизнь иначе!</h1>
         </div>
@@ -91,7 +91,7 @@
           <a href="#" class="research__link">Узнать больше об&nbsp;исследовании</a>
         </div>
       </section>
-      <div class="slider  slider--comment-slider">
+      <div class="slider slider--comment-slider">
         <div class="slider__wrapper">
           <div class="slider__slides">
             <input class="slider__switcher-input  slider__switcher-input--first" type="radio" id="comment-slider-btn-1" name="comment-slider-toggle" checked>
@@ -140,54 +140,88 @@
           </div>
         </div>
       </div>
-      <div class="slider  slider--versions-slider">
-        <table class="versions-table" border="1">
-          <tr class="versions-table__header-row">
-            <th class="versions-table__header-cell  versions-table__header-cell--marker">
-            </th>
-            <th class="versions-table__header-cell  versions-table__header-cell--marker">
-              <span>База</span>
-              <span>1,99 USD</span>
-            </th>
-            <th class="versions-table__header-cell  versions-table__header-cell--marker">
-              <span>Стандарт</span>
-              <span>3,99 USD</span>
-            </th>
-            <th class="versions-table__header-cell  versions-table__header-cell--marker">
-              <span>Анлим</span>
-              <span>9,99 USD</span>
-            </th>
 
-          </tr>
-          <tr class="versions-table__data-row">
-            <td class="versions-table__data-cell">Розовый фильтр</td>
-            <td class="versions-table__data-cell">+</td>
-            <td class="versions-table__data-cell">+</td>
-            <td class="versions-table__data-cell">+</td>
-          </tr>
-          <tr class="versions-table__data-row">
-            <td class="versions-table__data-cell">Смайлики</td>
-            <td class="versions-table__data-cell">-</td>
-            <td class="versions-table__data-cell">+</td>
-            <td class="versions-table__data-cell">+</td>
-          </tr>
-          <tr class="versions-table__data-row">
-            <td class="versions-table__data-cell">Комментарии</td>
-            <td class="versions-table__data-cell">-</td>
-            <td class="versions-table__data-cell">-</td>
-            <td class="versions-table__data-cell">+</td>
-          </tr>
-        </table>
-        <div class="slider__switcher">
-          <input class="slider__switcher-input" type="radio" id="table-slider-btn-1" name="table-slider-toggle" checked>
-          <label class="slider__switcher-label" for="table-slider-btn-1"></label>
-          <input class="slider__switcher-input" type="radio" id="table-slider-btn-2" name="table-slider-toggle">
-          <label class="slider__switcher-label" for="table-slider-btn-2"></label>
-          <input class="slider__switcher-input" type="radio" id="table-slider-btn-3" name="table-slider-toggle">
-          <label class="slider__switcher-label" for="table-slider-btn-3"></label>
+      <div class="slider slider--table-slider">
+        <div class="slider__wrapper">
+          <div class="slider__slides">
+            <input class="slider__switcher-input  slider__switcher-input--first" type="radio" id="table-slider-btn-1" name="table-slider-toggle">
+            <input class="slider__switcher-input  slider__switcher-input--second" type="radio" id="table-slider-btn-2" name="table-slider-toggle" checked>
+            <input class="slider__switcher-input  slider__switcher-input--third" type="radio" id="table-slider-btn-3" name="table-slider-toggle">
+            <div class="slider__slide">
+              <table class="versions-table" border="1">
+                <tr class="versions-table__header-row">
+                  <th class="versions-table__header-cell  versions-table__header-cell--marker">
+                  </th>
+                  <th class="versions-table__header-cell">
+                    <span>База</span>
+                    <span>1,99 USD</span>
+                  </th>
+                    <th class="versions-table__header-cell  versions-table__header-cell--marker">
+                    <span>Стандарт</span>
+                    <span>3,99 USD</span>
+                  </th>
+                  <th class="versions-table__header-cell">
+                    <span>Анлим</span>
+                    <span>9,99 USD</span>
+                  </th>
+                </tr>
+                <tr class="versions-table__data-row">
+                  <td class="versions-table__data-cell">Розовый фильтр</td>
+                  <td class="versions-table__data-cell">
+                    <span>Розовый фильтр</span>
+                    <span>+</span>
+                  </td>
+                  <td class="versions-table__data-cell">
+                    <span>Розовый фильтр</span>
+                    <span>+</span>
+                  </td>
+                  <td class="versions-table__data-cell">
+                    <span>Розовый фильтр</span>
+                    <span>+</span>
+                  </td>
+                </tr>
+                <tr class="versions-table__data-row">
+                  <td class="versions-table__data-cell">Смайлики</td>
+                  <td class="versions-table__data-cell  versions-table__data-cell--no">
+                    <span>Смайлики</span>
+                    <span>-</span>
+                  </td>
+                  <td class="versions-table__data-cell">
+                    <span>Смайлики</span>
+                    <span>+</span>
+                  </td>
+                  <td class="versions-table__data-cell">
+                    <span>Смайлики</span>
+                    <span>-</span>
+                  </td>
+                </tr>
+                <tr class="versions-table__data-row">
+                  <td class="versions-table__data-cell">Комментарии</td>
+                  <td class="versions-table__data-cell  versions-table__data-cell--no">
+                    <span>Комментарии</span>
+                    <span>-</span>
+                  </td>
+                  <td class="versions-table__data-cell  versions-table__data-cell--no">
+                    <span>Комментарии</span>
+                    <span>+</span>
+                  </td>
+                  <td class="versions-table__data-cell">
+                    <span>Комментарии</span>
+                    <span>+</span>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="slider__switcher">
+              <label class="slider__switcher-label  slider__switcher-label--first" for="table-slider-btn-1"></label>
+              <label class="slider__switcher-label  slider__switcher-label--second" for="table-slider-btn-2"></label>
+              <label class="slider__switcher-label  slider__switcher-label--third" for="table-slider-btn-3"></label>
+            </div>
+            <button class="slider__toggle slider__toggle--prev" type="button">Предыдущий отзыв</button>
+            <button class="slider__toggle slider__toggle--next" type="button">Следующий отзыв</button>
+          </div>
         </div>
       </div>
-
       <div class="contacts-block">
         <div class="contacts-block__wrapper">
           <div class="contacts-block__header">
